k8s/services/media/app/prowlarr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - prowlarr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: prowlarr
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/prowlarr/
    clientID: prowlarr
    clientSecret:
      name: prowlarr-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
